--- a/config/database.yml
+++ b/config/database.yml
@@ -7,15 +7,15 @@ default: &default
 
 development:
   <<: *default
-  database: ichigo_daihuku_development
+  database: ichigo-daihuku_development
 
 test:
   <<: *default
-  database: ichigo_daihuku_test
+  database: ichigo-daihuku_test
 
 production:
   <<: *default
-  database: ichigo_daihuku_production
-  username: ichigo_daihuku
+  database: ichigo-daihuku_production
+  username: ichigo-daihuku
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
